# utouch-calculator

./: CMakeLists.txt  README.md  manifest.json.in  utouch-calculator.desktop.in
po/: CMakeLists.txt  en.po  utouch-calculator.sverzegnassi.pot  zh_CN.po
src/: CMakeLists.txt  main.cpp
